Layout and spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ h5 {
 
 
 .helloh1 {
-  margin-top: 54px;
+  margin-top: 44px;
   margin-bottom: 0px;
 }
 
